--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "apiato/core": "^6.2.5",
         "apiato/welcome-container": "^1.0.0",
         "apiato/documentation-generator-container": "^1.0.0",
+        "apiato/localization-container": "^1.0",
         "doctrine/dbal": "^3.1.2",
         "fideloper/proxy": "^4.4.1",
         "fruitcake/laravel-cors": "^1.0.6",
@@ -56,6 +57,12 @@
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.3.0",
         "phpunit/phpunit": "^9.5.2",
+        "phploc/phploc": "^7.0",
+        "phpmd/phpmd": "^2.11",
+        "sebastian/phpcpd": "^6.0",
+        "pdepend/pdepend": "^2.10",
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpcompatibility/php-compatibility": "*",
         "roave/security-advisories": "dev-latest"
     },
     "autoload": {
@@ -66,7 +73,9 @@
         }
     },
     "autoload-dev": {
-        "psr-4": {}
+        "psr-4": {
+            "Apiato\\Test\\" : "./tests"
+        }
     },
     "extra": {
         "laravel": {
@@ -95,6 +104,31 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "project-install" : [
+            "@php artisan key:generate",
+            "@php artisan migrate",
+            "@php artisan db:seed",
+            "@php artisan apiato:permissions:toRole admin",
+            "@php artisan passport:install"
+        ],
+        "project-update" : [
+            "@php artisan migrate:fresh",
+            "@php artisan db:seed",
+            "@php artisan apiato:permissions:toRole admin",
+            "@php artisan passport:install"
+        ],
+        "phploc": "@php ./vendor/phploc/phploc/phploc ./app",
+        "phpcpd": "@php ./vendor/sebastian/phpcpd/phpcpd ./app",
+        "phpunit": "@php ./vendor/phpunit/phpunit/phpunit --configuration ./phpunit.xml",
+        "phpmd": "@php ./vendor/phpmd/phpmd/src/bin/phpmd ./app text ./phpmd.xml",
+        "phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs ./app --standard=./phpcs.xml",
+        "test": [
+            "@phpunit",
+            "@phpcs",
+            "@phpmd",
+            "@phploc",
+            "@phpcpd"
         ]
     },
     "config": {
